--- a/app/src/main/res/layout/myprofile_screen.xml
+++ b/app/src/main/res/layout/myprofile_screen.xml
@@ -3,45 +3,86 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Main">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="395dp"
-        android:layout_height="53dp"
-        android:gravity="center"
-        android:text="Settings"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="401dp" />
+    <ImageButton
+        android:id="@+id/nav_chat_button"
+        android:layout_width="95dp"
+        android:layout_height="56dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="open_chat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/nav_profile_button"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/nav_listings_button"
+        app:srcCompat="@drawable/ic_comments_bubble" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="395dp"
-        android:layout_height="53dp"
-        android:gravity="center"
-        android:text="Recent Transactions"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="348dp" />
+    <ImageButton
+        android:id="@+id/nav_listings_button"
+        android:layout_width="92dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="24dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="open_listings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_list" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="224dp"
-        android:layout_height="35dp"
-        android:text="First Name Last Name"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        tools:layout_editor_absoluteX="144dp"
-        tools:layout_editor_absoluteY="73dp" />
+    <ImageButton
+        android:id="@+id/nav_profile_button"
+        android:layout_width="100dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="24dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="open_profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_user" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="395dp"
-        android:layout_height="53dp"
-        android:gravity="center"
+    <ImageButton
+        android:id="@+id/gear_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="open_settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_02e6632e933d427a14c95b99437b0544" />
+
+    <Button
+        android:id="@+id/transaction_history_button"
+        android:layout_width="216dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="28dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="open_transaction_history"
+        android:text="Transaction History"
+        app:layout_constraintBottom_toTopOf="@+id/nav_chat_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/my_listings_button"
+        android:layout_width="216dp"
+        android:layout_height="64dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:onClick="open_my_listings"
         android:text="My Listings"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="295dp" />
+        app:layout_constraintBottom_toTopOf="@+id/transaction_history_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintBottom_toTopOf="@+id/nav_chat_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
