--- a/app/src/main/res/layout/chat_screen.xml
+++ b/app/src/main/res/layout/chat_screen.xml
@@ -14,11 +14,11 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="Search..."
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Search..." />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/nav_chat_button"
