--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,23 @@
 
     <EditText
         android:id="@+id/search_bar"
-        android:layout_width="234dp"
+        android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:hint="Search..."
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/filter_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Search..." />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/new_listing_button"
-        android:layout_width="48dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="2dp"
+        android:layout_width="41dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginTop="8dp"
         android:background="?android:attr/selectableItemBackground"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,13 +33,13 @@
 
     <Button
         android:id="@+id/filter_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="56dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:background="?android:attr/selectableItemBackground"
         android:text="Filter"
-        app:layout_constraintStart_toEndOf="@+id/search_bar"
+        app:layout_constraintEnd_toStartOf="@+id/new_listing_button"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Filter" />
 
